k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bankapp-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: bankapp-test
---
apiVersion: v1
kind: Namespace
metadata:
  name: bankapp-prod
